<resources>
    <string name="app_name">Books</string>
    <string name="book_name">book name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="textview">TextView</string>
    <string name="edit_profile">Edit profile</string>
    <string name="takephoto">takePhoto</string>
    <string name="uoload_pdf_file">Uoload PDF file</string>
    <string name="book_owner">Book owner</string>
    <string name="auther_name">auther name</string>
    <string name="yearofpublication">yearOfPublication</string>
    <string name="add">add</string>
    <string name="save">save</string>
    <string name="send">send</string>
    <string name="sendrate">sendRate</string>
    <string name="readpdf">readpdf</string>
    <string name="addtofav">addToFav</string>
    <string name="notification_channel_name">Books</string>
    <string name="welcome">Welcome to Books app</string>
    <string name="new_notify">Do you want to see new books?</string>
    <string name="hello">Hello</string>
    <string name="hellooWo">helloo</string>
    <string name="year">Year:</string>
    <string name="review">Review</string>
    <string name="summary">Summary:</string>
    <string name="author">Author:</string>
    <string name="enter_email">enter email</string>
    <string name="enter_password">enter password</string>
    <string name="register">register</string>
    <string name="read_book">Read book</string>
    <string name="audio_book">Audio book</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="audio">audio</string>
    <string name="upload_audio">Download audio</string>
    <string name="click_to_rate">Click to rate</string>
    <string name="by">by</string>
    <string name="name">Name</string>
    <string name="bio">bio</string>
    <string name="home">home</string>
    <string name="like">like</string>
    <string name="profile">profile</string>
    <string name="delete">Delete book</string>
    <string name="delete_msg">Are you sure you want to delete the book?</string>

</resources>