<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".fragments.BooksFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FDFBFB"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bookTv"
            android:layout_width="120sp"
            android:layout_height="120sp"
            tools:src="@tools:sample/avatars"


            />


        <Button
            android:id="@+id/takePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"

            android:backgroundTint="@color/teal_700"
            android:text="@string/takephoto" />


        <Button
            android:id="@+id/audioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upload audio" />

        <EditText
            android:id="@+id/bookNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:ems="10"
            android:hint="@string/book_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/autherName_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="54dp"
            android:ems="10"
            android:hint="@string/auther_name"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/yearOfPublicationTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/yearofpublication"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="100sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_700"
                android:text="@string/add" />


        </LinearLayout>


    </LinearLayout>
</ScrollView>