<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    tools:context=".fragments.bookdetails.BookDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="#FDFBFB"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="by"
            android:textColor="#090909"
            app:layout_constraintEnd_toStartOf="@+id/username_tv"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="TextView"
            android:textColor="#070707"
            app:layout_constraintEnd_toStartOf="@+id/textView13"
            app:layout_constraintStart_toEndOf="@+id/authorNameTv"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/click_to_rate"
            android:textColor="#29315E"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descerption" />

        android:layout_width="200sp"
        android:layout_height="200sp"

        <ImageView
            android:id="@+id/imageBookTv"
            android:layout_width="300dp"
            android:layout_height="250sp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:src="@tools:sample/avatars" />

        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:layout_marginTop="12dp"
            android:progress="50"
            app:layout_constraintEnd_toEndOf="@+id/imageBookTv"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="@+id/imageBookTv"
            app:layout_constraintTop_toBottomOf="@+id/imageBookTv" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

        </LinearLayout>

        <TextView
            android:id="@+id/BookNameTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:gravity="center"
            android:text="TextView"
            android:textColor="#050505"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageBookTv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageBookTv"
            app:layout_constraintTop_toBottomOf="@+id/imageBookTv" />

        <TextView
            android:id="@+id/authorNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="TextView"
            android:textColor="#0B0B0B"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/BookNameTv" />

        <TextView
            android:id="@+id/descerption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="TextView"
            android:textColor="#090909"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />


        <TextView
            android:id="@+id/yearOfBookTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="TextView"
            android:textColor="#0B0B0B"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/imageBookTv"
            app:layout_constraintHorizontal_bias="0.029"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/BookNameTv" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="235dp"
            android:layout_height="43dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/commentRv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <EditText
            android:id="@+id/commentTv"
            android:layout_width="317sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"

            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/commentRv"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/sendCommentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/commentTv"
            app:layout_constraintTop_toBottomOf="@+id/commentRv" />

        <TextView
            android:id="@+id/rateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textColor="#070707"
            android:textColorHint="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/username_tv" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"

            android:gravity="center"
            android:text="@string/author"
            android:textColor="#29315E"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/authorNameTv"
            app:layout_constraintTop_toBottomOf="@+id/BookNameTv" />

        <CheckBox
            android:id="@+id/addToFav"
            android:layout_width="35dp"
            android:layout_height="23dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:button="@drawable/fav_checkbox"
            app:layout_constraintStart_toEndOf="@+id/rateTv"
            app:layout_constraintTop_toBottomOf="@+id/yearOfBookTv" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="17dp"
            android:layout_height="26dp"
            android:layout_marginStart="136dp"
            android:layout_marginTop="124dp"
            android:src="@drawable/star"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/play_btn" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="6dp"
            android:layout_height="26dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="|"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/BookNameTv"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="@+id/BookNameTv"
            app:layout_constraintTop_toBottomOf="@+id/BookNameTv" />
        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/year"
            android:textColor="#29315E"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/BookNameTv" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="576dp"
            android:text="@string/summary"
            android:textColor="#29315E"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review"
            android:textColor="#29315E"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <ImageButton
            android:id="@+id/play_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="12dp"
            android:background="@drawable/btn_bg"
            android:src="@drawable/ic_baseline_play_arrow_24"
            app:layout_constraintEnd_toEndOf="@+id/seekbar"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="@+id/seekbar"
            app:layout_constraintTop_toBottomOf="@+id/seekbar" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="136dp"
            android:layout_marginTop="48dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="listen and enjoy"
            android:textColor="#121111"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>